include_directories(..)

# Email plugin
# add_library(emaildetailswidgetplugin MODULE emaildetailswidget.cpp)
# target_link_libraries(emaildetailswidgetplugin Qt5::Core Qt5::Gui ${KDE4_KDECORE_LIBRARY} KPeople KPeopleWidgets)
#
# install(TARGETS emaildetailswidgetplugin DESTINATION ${PLUGIN_INSTALL_DIR})
# install(FILES emaildetailswidgetplugin.desktop DESTINATION ${SERVICES_INSTALL_DIR})
#
# #  Merge Plugin
# add_library(mergecontactswidgetplugin MODULE mergecontactswidget.cpp personpresentationwidget.cpp)
# target_link_libraries(mergecontactswidgetplugin Qt5::Core Qt5::Gui ${KDE4_KDECORE_LIBRARY} KPeople KPeopleWidgets)
#
# install(TARGETS mergecontactswidgetplugin DESTINATION ${PLUGIN_INSTALL_DIR})
# install(FILES mergecontactswidgetplugin.desktop DESTINATION ${SERVICES_INSTALL_DIR})
#
# # Phone plugin
# add_library(phonedetailswidgetplugin MODULE phonedetailswidget.cpp)
# target_link_libraries(phonedetailswidgetplugin Qt5::Core Qt5::Gui ${KDE4_KDECORE_LIBRARY} KPeople KPeopleWidgets)
#
# install(TARGETS phonedetailswidgetplugin DESTINATION ${PLUGIN_INSTALL_DIR})
# install(FILES phonedetailswidgetplugin.desktop DESTINATION ${SERVICES_INSTALL_DIR})
